--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "stealth-webpage"
+          heroku_app_name: "stealthwebpage"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           usedocker: true
