--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    volumes:
+      ["./stealthwebpage:/opt/stealthwebpage"]
     environment:
       PORT: 80
+      FLASK_DEBUG: True
     ports:
       - "80:80"
